@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-12-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
+        sample RGB images.
+
+</UL>
+<p>
 2008-12-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
